--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1592,6 +1592,11 @@ pre code {
     width: 750px;
   }
 }
+@media (min-width: 368px) {
+  .container {
+    width: 450px;
+  }
+}
 @media (min-width: 992px) {
   .container {
     width: 970px;
